// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InterventionStatusButtons /> Should render and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c1 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #FFFFFF;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c2 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: transparent;
  border: #107969 solid 1px;
  color: #107969;
}

.c2:hover {
  background-color: #107969;
  color: white;
}

.c2 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      currentitem="false"
      data-for="1/12/2021"
      data-tip="true"
    >
      <button
        class="c1 c2"
        color="primary"
      >
        <a
          download="example.com"
          href="http://example.com"
        >
          <span>
            Download CSV
          </span>
        </a>
      </button>
    </div>
    <div
      class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-top type-dark"
      data-id="tooltip"
      id="1/12/2021"
    >
      <style>
        
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
      </style>
      <p
        class="c3"
      >
        CSV last generated at: 2021/01/12 00:00
      </p>
    </div>
  </div>
  <button
    class="c1 c2"
    color="primary"
  >
    <span>
      Generate new CSV
    </span>
  </button>
</div>
`;

exports[`<InterventionStatusButtons /> Should render and match the snapshot 2`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c1 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #FFFFFF;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c4 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c2 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: transparent;
  border: #107969 solid 1px;
  color: #107969;
}

.c2:hover {
  background-color: #107969;
  color: white;
}

.c2 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: rgba(140,189,0,1);
}

.c5 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      currentitem="false"
      data-for="1/12/2021"
      data-tip="true"
    >
      <button
        class="c1 c2"
        color="primary"
      >
        <a
          download="example.com"
          href="http://example.com"
        >
          <span>
            Download CSV
          </span>
        </a>
      </button>
    </div>
    <div
      class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-top type-dark"
      data-id="tooltip"
      id="1/12/2021"
    >
      <style>
        
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
      </style>
      <p
        class="c3"
      >
        CSV last generated at: 2021/01/12 00:00
      </p>
    </div>
  </div>
  <button
    class="c1 c2"
    color="primary"
  >
    <span>
      Generate new CSV
    </span>
  </button>
  <button
    class="c4 c5"
    color="primary"
    data-cy="publish-session-button"
  >
    <span>
      Publish Intervention
    </span>
  </button>
</div>
`;

exports[`<InterventionStatusButtons /> Should render and match the snapshot 3`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c1 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #FFFFFF;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c4 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c2 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: transparent;
  border: #107969 solid 1px;
  color: #107969;
}

.c2:hover {
  background-color: #107969;
  color: white;
}

.c2 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: rgba(240,104,74,1);
}

.c5 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      currentitem="false"
      data-for="1/12/2021"
      data-tip="true"
    >
      <button
        class="c1 c2"
        color="primary"
      >
        <a
          download="example.com"
          href="http://example.com"
        >
          <span>
            Download CSV
          </span>
        </a>
      </button>
    </div>
    <div
      class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-top type-dark"
      data-id="tooltip"
      id="1/12/2021"
    >
      <style>
        
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
      </style>
      <p
        class="c3"
      >
        CSV last generated at: 2021/01/12 00:00
      </p>
    </div>
  </div>
  <button
    class="c1 c2"
    color="primary"
  >
    <span>
      Generate new CSV
    </span>
  </button>
  <button
    class="c4 c5"
    color="primary"
  >
    <span>
      Close Intervention
    </span>
  </button>
</div>
`;
